<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="mainscreen">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20dp"
        android:hint="@string/_0"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="30sp" />




    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20dp"
            android:hint="@string/_0"
            android:text="@string/_0"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <LinearLayout
            android:paddingTop="20sp"
            android:background="#F4F4F4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/backspace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/c"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_clear"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonBr1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_paranOpen"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_paranthesis"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonBr2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_paranClose"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_paranthesis"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_divide"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operator"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_Add"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operator"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonSubtract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_subtract"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operator"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginRight="8dp"/>

                <Button
                    android:id="@+id/button8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_multiply"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operator"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/AC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_allClear"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_clear"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/button0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <Button
                    android:id="@+id/buttonDot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_decimal"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operand"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <Button
                    android:id="@+id/buttonEquals"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_equalsTo"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_operator"
                    android:textStyle="bold"/>
            </LinearLayout>


        </LinearLayout>



    </LinearLayout>


</LinearLayout>